--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,16 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+@import './reset';
+
 html, body {
-  height: 100vh;
-  width: 100vw;
   font-size: 16px;
+  height: 100vh;
   margin: 0;
   padding: 0;
+  width: 100vw;
 }
 
 #root {
   align-items: center;
   display: flex;
-  justify-content: center;
+  font-family: 'Roboto', sans-serif;
   height: 100%;
+  justify-content: center;
   width: 100%;
 }
 
