--- a/client/src/pages/components/Form/Form.scss
+++ b/client/src/pages/components/Form/Form.scss
@@ -1,4 +1,4 @@
-@import './../../styles/utilities';
+@import './../../../styles/utilities';
 
 .login-container {
   display: flex;
@@ -43,6 +43,7 @@
         position: absolute;
         right: px-to-rem(10);
         top: px-to-rem(12);
+        height: 24px;
       }
     }
   }
