--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-@import './reset';
-
 html, body {
   font-size: 16px;
   height: 100vh;
@@ -11,17 +9,16 @@ html, body {
 }
 
 #root {
-  align-items: center;
-  display: flex;
   font-family: 'Roboto', sans-serif;
   height: 100%;
-  justify-content: center;
   width: 100%;
 }
 
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
 }
 
 *, *::before, *::after {
@@ -31,4 +28,8 @@ html, body {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+input, textarea, button {
+  outline: none
 }
