--- a/client/src/pages/dashboard/Dashboard.scss
+++ b/client/src/pages/dashboard/Dashboard.scss
@@ -1,7 +1,7 @@
 @import './../../styles/utilities';
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .dashboard-menu-header {
@@ -20,10 +20,11 @@ body {
 }
 
 .content-container {
-  height: 100%;
-  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
   font-size: 30px;
+  height: 100%;
+  padding: 0 px-to-rem(32);
+  width: 100%;
 }
