--- a/client/src/pages/dashboard/Dashboard.scss
+++ b/client/src/pages/dashboard/Dashboard.scss
@@ -25,6 +25,6 @@ body {
   justify-content: space-around;
   font-size: 30px;
   height: 100%;
-  padding: 0 px-to-rem(32);
+  margin-top: px-to-rem(44);
   width: 100%;
 }
