--- a/client/src/pages/login/Login.scss
+++ b/client/src/pages/login/Login.scss
@@ -1,9 +1,10 @@
 @import './../../styles/utilities';
 
 .container {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   justify-content: center;
+  width: 100vw;
 }
