--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import './defaults';
 
 html, body {
   font-size: 16px;
