feat: ajustes no layout das telas de perfil e de dashboard

--- a/client/src/pages/components/Button/Button.scss
+++ b/client/src/pages/components/Button/Button.scss
@@ -1,8 +1,8 @@
-@import './../../../styles/utilities';
-@import './../../../styles/settings.variables';
+@import "./../../../styles/utilities";
+@import "./../../../styles/settings.variables";
 
 button {
-  background-color: map-get($colors, 'primary-background');
+  background-color: map-get($colors, "primary-background");
   border: transparent;
   border-radius: px-to-rem(5);
   color: white;
@@ -12,7 +12,7 @@ button {
   margin-bottom: px-to-rem(10);
 
   &:hover {
-    background-color: map-get($colors, 'primary-background-hover');
+    background-color: darken(map-get($colors, "primary-background"), 10%);
     cursor: pointer;
   }
 
