--- a/client/src/styles/_settings.variables.scss
+++ b/client/src/styles/_settings.variables.scss
@@ -1,9 +1,7 @@
 $colors: (
-  'dark-red': #7e0505,
-  'light-red': #cf0303,
-  'border': #d3ddf2,
-  'link': #073392,
-  'link-hover': #2463eb,
-  'primary-background': #4343db,
-  'primary-background-hover': #5050f1,
+  "dark-red": #7e0505,
+  "light-red": #cf0303,
+  "border": #d3ddf2,
+  "link": #073392,
+  "primary-background": #4343db,
 );
