--- a/client/src/pages/components/Card/Card.scss
+++ b/client/src/pages/components/Card/Card.scss
@@ -16,13 +16,13 @@
     justify-content: space-between;
     padding: px-to-rem(16) px-to-rem(22);
 
-    .blocked {
+    .blocked-icon {
       svg {
         fill: map-get($colors, "dark-red");
       }
     }
 
-    .actived {
+    .actived-icon {
       svg {
         fill: #006d00;
       }
@@ -48,11 +48,26 @@
   .edit-container {
     align-items: center;
     display: flex;
-    color: map-get($colors, "link");
+    user-select: none;
+
+    .blocked-text {
+      color: map-get($colors, "dark-red");
+    }
+
+    .activated-text {
+      color: #006d00;
+    }
 
     &:hover {
       cursor: pointer;
-      color: map-get($colors, "link-hover");
+
+      .blocked-text {
+        color: lighten(map-get($colors, "dark-red"), 10%);
+      }
+
+      .activated-text {
+        color: lighten(#006d00, 10%);
+      }
     }
   }
 }
